# monitoring-operator

./: CHANGELOG.md  Cargo.toml  Makefile  README.adoc  VERSION  config.yaml  deny.toml  release.toml
.github/workflows/: build_artifacts.yml  publish_dev_artifacts.yml  publish_release_artifacts.yml  rust.yml
crd/: CHANGELOG.adoc  Cargo.toml  README.adoc
crd/src/: error.rs  lib.rs
deploy/config-spec/: properties.yaml
deploy/crd/: monitoringcluster.crd.yaml
docker/: Dockerfile
docs/: antora.yml
docs/modules/ROOT/pages/: building.adoc  commandline_args.adoc  configuration.adoc  index.adoc  installation.adoc  usage.adoc
examples/: simple-monitoringcluster.yaml
operator/: CHANGELOG.adoc  Cargo.toml  README.adoc
operator/src/: error.rs  lib.rs  prometheus.rs
packaging/rpm/SOURCES/stackable-monitoring-operator-VERSION/usr/lib/systemd/system/: stackable-monitoring-operator.service
release/scripts/: perform.sh  release-pre.sh
rust/crd/: Cargo.toml
rust/crd/src/: error.rs  lib.rs
rust/operator/: Cargo.toml
rust/operator-binary/: Cargo.toml  build.rs
rust/operator-binary/src/: stackable-monitoring-operator.rs
rust/operator/data/test/: nodepods.yaml  nodepods_and_node.yaml
rust/operator/src/: error.rs  lib.rs  prometheus.rs
server/: CHANGELOG.adoc  Cargo.toml  README.adoc  build.rs
server/packaging/debian/: service
server/packaging/rpm/SOURCES/stackable-monitoring-operator-server-VERSION/usr/lib/systemd/system/: stackable-monitoring-operator-server.service
server/src/: main.rs
