[package]
authors = ["Malte Sander <malte.sander.it@gmail.com>"]
description = "Stackable Monitoring Operator - The Operator Library"
edition = "2018"
license = "Apache-2.0"
name = "stackable-monitoring-operator"
version = "0.3.2-alpha.0"

[dependencies]
product-config = { git = "https://github.com/stackabletech/product-config.git", branch = "main" }
stackable-monitoring-crd = { path = "../crd" }
stackable-operator = { git = "https://github.com/stackabletech/operator-rs.git", branch = "main" }


async-trait = "0.1"
futures = "0.3"
k8s-openapi = { version = "0.12", default-features = false, features = ["v1_20"] }
kube = { version = "0.58", default-features = false, features = ["jsonpatch"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8"
serde_with_macros = "1.4"
strum = "0.21"
strum_macros = "0.21"
thiserror = "1.0"
tracing = "0.1"
handlebars = "4.1"

[dev-dependencies]
rstest = "0.11"
