[package]
authors = ["Malte Sander <malte.sander.it@gmail.com>"]
description = "Stackable Monitoring Operatpr"
edition = "2018"
license = "Apache-2.0"
name = "stackable-monitoring-operator-server"
version = "0.3.1"

[dependencies]
stackable-operator = { git = "https://github.com/stackabletech/operator-rs.git", branch = "main" }
stackable-monitoring-crd = { path = "../crd" }
stackable-monitoring-operator = { path = "../operator" }

tokio = { version = "1.10", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"

[package.metadata.deb]
maintainer-scripts = "packaging/debian/"
systemd-units = { enable = false }
assets = [
    ["../target/release/stackable-monitoring-operator-server", "opt/stackable/monitoring-operator/", "755"],
    ["../deploy/crd/monitoringcluster.crd.yaml", "etc/stackable/monitoring-operator/crd/", "644"],
    ["../deploy/config-spec/properties.yaml", "etc/stackable/monitoring-operator/config-spec/", "644"],
]
