[package]
authors = ["Malte Sander <malte.sander.it@gmail.com>"]
build = "build.rs"
description = "Stackable Monitoring Operator"
edition = "2018"
license = "OSL-3.0"
name = "stackable-monitoring-operator-binary"
repository = "https://github.com/stackabletech/monitoring-operator"
version = "0.3.0-nightly"

[dependencies]
stackable-operator = { git = "https://github.com/stackabletech/operator-rs.git", tag = "0.2.1" }
stackable-monitoring-crd = { path = "../crd" }
stackable-monitoring-operator = { path = "../operator" }

anyhow = "1.0"
clap = "2.33"
k8s-openapi = { version = "0.12", default-features = false, features = ["v1_21"] }
tokio = { version = "1.10", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"

[build-dependencies]
built = { version =  "0.5", features = ["chrono", "git2"] }
stackable-operator = { git = "https://github.com/stackabletech/operator-rs.git", tag = "0.2.1" }
stackable-monitoring-crd = { path = "../crd" }

[package.metadata.deb]
name = "stackable-monitoring-operator"
maintainer-scripts = "../../packaging/debian/"
systemd-units = { enable = false, unit-name = "stackable-monitoring-operator" }
assets = [
    ["../../target/release/stackable-monitoring-operator", "opt/stackable/monitoring-operator/", "755"],
    ["../../deploy/crd/monitoringcluster.crd.yaml", "etc/stackable/monitoring-operator/crd/", "644"],
    ["../../deploy/config-spec/properties.yaml", "etc/stackable/monitoring-operator/config-spec/", "644"],
]

[[bin]]
name = "stackable-monitoring-operator"
path = "src/stackable-monitoring-operator.rs"