[package]
authors = ["Malte Sander <malte.sander.it@gmail.com>"]
description = "Stackable Monitoring Operator - The Operator Library"
edition = "2018"
license = "OSL-3.0"
name = "stackable-monitoring-operator"
repository = "https://github.com/stackabletech/monitoring-operator"
version = "0.3.0-nightly"

[dependencies]
product-config = { git = "https://github.com/stackabletech/product-config.git", tag = "0.1.0" }
stackable-monitoring-crd = { path = "../crd" }
stackable-operator = { git = "https://github.com/stackabletech/operator-rs.git", branch = "main" }

async-trait = "0.1"
futures = "0.3"
k8s-openapi = { version = "0.13", default-features = false }
kube = { version = "0.60", default-features = false, features = ["jsonpatch"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8"
serde_with_macros = "1.4"
strum = "0.21"
strum_macros = "0.21"
thiserror = "1.0"
tracing = "0.1"
handlebars = "4.1"

[dev-dependencies]
rstest = "0.11"
