[package]
authors = ["Malte Sander <malte.sander.it@gmail.com>"]
description = "Stackable Monitoring Operator - The Operator Library"
edition = "2018"
license = "OSL-3.0"
name = "stackable-monitoring-operator"
repository = "https://github.com/stackabletech/monitoring-operator"
version = "0.4.0-nightly"

[dependencies]
stackable-monitoring-crd = { path = "../crd" }
stackable-operator = { git = "https://github.com/stackabletech/operator-rs.git", tag = "0.3.0" }

async-trait = "0.1"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8"
serde_with_macros = "1.4"
strum = "0.22"
strum_macros = "0.23"
thiserror = "1.0"
tracing = "0.1"
handlebars = "4.1"

[dev-dependencies]
rstest = "0.11"
